# whatsapp-invoice-assistant

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DATABASE.md  LICENSE  Makefile  PLAN.md  README.md  TASKS.md  TECH_STACK.md  alembic.ini  app.db  db_status.py  docker-compose.yml  docker-run.sh  pyproject.toml  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
agents/: data_extractor.py  database_storage_agent.py  file_processor.py  file_validator.py  invoice_entity_extraction_agent.py  invoice_rag_agent.py  invoice_rag_agent.py.bak  response_formatter.py  response_formatter_agent.py  text_intent_classifier.py  text_to_sql_conversion_agent.py
api/: main.py
config/: env.yaml
constants/: db_schema.py  fallback_messages.py  intent_types.py  invoice_processing_messages.py  llm_configs.py  prompt_mappings.py  ui_config.py  vector_search_configs.py
database/: connection.py  crud.py  database_utils.py  models.py  schemas.py  user_utils.py
database/migrations/: env.py
database/migrations/versions/: 455b03be74ff_initial_migration.py  4eac7fa08cfa_add_pgvector_support_and_invoice_.py  add_vector_embeddings.py  (+1 more)
docker/: Dockerfile
docs/: CHANGELOG.md  DATABASE.md  DOCKER.md  MONGODB_MEMORY.md  PostgresSQL_Storage_Query.md  Query_Types.md  VECTOR_SEARCH.md
helm/whatsapp-invoice-assistant/: Chart.yaml  README.md  test-values.yaml  values.yaml
langchain_app/: __init__.py  api.py  file_processing_workflow.py  general_response_workflow.py  invoice_creator_workflow.py  invoice_query_workflow.py  nodes.py  state.py  text_processing_workflow.py  workflow.py
memory/: agent_memory.py  context_manager.py  langgraph_memory.py  langgraph_mongodb_checkpoint.py  memory_manager.py  mongodb_memory.py
patches/: __init__.py
prompts/: database_storage_prompt.txt  db_schema_info.txt  file_validation_prompt.txt  file_validator_image_prompt.txt  invoice_data_extraction_prompt.txt  invoice_entity_extraction_prompt.txt  invoice_image_data_extraction_prompt.txt  response_formatting_prompt.txt  response_validation_prompt.txt  text_intent_classification_prompt.txt  text_to_sql_conversion_prompt.txt  text_to_sql_system_prompt.txt
prompts/sql_context_templates/: semantic_search_context.txt  summary_query_context.txt
scripts/: cleanup_memory.py  db_clean.py  seed_categories.py  update_embeddings.py
services/: database.py  llm_factory.py  openai_service.py
storage/: s3_handler.py
tests/: README.md  __init__.py  interactive_test.py  test_guide.md  test_rag_agent.py  test_results.md  test_runner.py  test_semantic_sql.py  test_sql_generation.py
tests/agents/: __init__.py  test_data_extractor.py  test_entity_extraction.py  test_file_validator.py  test_response_formatter.py  test_text_intent_classifier.py  test_text_to_sql_conversion.py
tests/database/: __init__.py  seed.py  test_crud.py  test_migrations.py  test_models.py
tests/fixtures/: test_data.py
tests/langchain_app/: __init__.py  test_workflow.py
tests/memory/: __init__.py  test_memory.py  test_memory_interactive.py
tests/services/: test_llm_factory.py  test_openai_service.py
tests/workflow/: __init__.py  test_end_to_end.py  test_workflows.py
ui/: README.md  app.py
ui/templates/: index.html
utils/: base_agent.py  config.py  db_embeddings.py  db_status.py  input_type_router.py  logging.py  vector_utils.py
utils/tests/: test_config.py  test_logging.py
workflows/: invoice_query_workflow.py  workflow_router.py
(+12 files in other folders)
